--- a/project1/requirements.txt
+++ b/project1/requirements.txt
@@ -1,3 +1,18 @@
 numpy==1.26.4
 pandas==2.2.1
+Pillow==10.3.0
 scikit_learn==1.4.1.post1
+skimpy==0.0.14
+torch==2.2.2
+torchvision==0.17.2
+tqdm==4.66.2
+opencv_python==4.9.0.80
+matplotlib==3.8.3
+shap==0.45.0
+missingno==0.5.2
+pca==2.0.5
+optuna==3.6.1
+seaborn==0.13.0
+captum==0.7.0
+tensorboard==2.16.2
+scikit_image==0.23.1
