--- a/project2/task2/representation_learning/representation_learning_config.yaml
+++ b/project2/task2/representation_learning/representation_learning_config.yaml
@@ -3,10 +3,11 @@ general:
 
 paths:
   mitbih_train: ../../data/mitbih_train.csv
-  mitbih_test: ../../data/mithbih_test.csv
+  mitbih_test: ../../data/mitbih_test.csv
   ptb_train: ../../data/ptbdb_train.csv
   ptb_test: ../../data/ptbdb_test.csv
-  transformer_model: ../weights/representation_learning.pth
+  contrastive_model: ../weights/representation_learning.pth
+  encoder: ../weights/encoder_q2.pth
   summary_writer: logs/representation_learning
 
 
@@ -14,6 +15,7 @@ dataloader:
   train_batch_size: 64
   augmented_train_batch_size: 128
   val_batch_size: 256
+  augmented_val_batch_size: 256
   test_batch_size: 256
 
 
@@ -22,12 +24,12 @@ adamw:
   weight_decay: 0.0001 
   learning_rate: 0.0003
 
-
-encoder:
-  latent_dim: 128
+  
 
 contrastive_model:
-  projection_head: 64
+  projection_dim: 128
+  latent_dim: 256
+  num_epochs: 200
 
 scheduler:
   factor: 0.5
