--- a/project2/task1/classical_ml/classical_ml_config.yaml
+++ b/project2/task1/classical_ml/classical_ml_config.yaml
@@ -3,44 +3,59 @@ general:
 
 
 paths:
-  ptb_train: ../data/ptbdb_train.csv
-  ptb_test: ../data/ptbdb_test.csv
+  lightgbm_feat_eng: ../weights/lightgbm_feat_eng.pkl
+  lightgbm_no_feat_eng: ../weights/lightgbm_no_feat_eng.pkl
   logistic_regression_feat_eng: ../weights/logistic_regression_feat_eng.pkl
   logistic_regression_no_feat_eng: ../weights/logistic_regression_no_feat_eng.pkl
-  catboost_feat_eng: ../weights/catboost_feat_eng.pkl
-  catboost_no_feat_eng: ../weights/catboost_no_feat_eng.pkl
+  ptb_test: ../../data/ptbdb_test.csv
+  ptb_train: ../../data/ptbdb_train.csv
   rf_feat_eng: ../weights/rf_feat_eng.pkl
   rf_no_feat_eng: ../weights/rf_no_feat_eng.pkl
 
 
 logistic_regression:
-  penalty: elasticnet
-  solver: saga
+  Cs: 10
   cv: 5
   max_iter: 1000
-  Cs: 10
   num_l1_ratios: 10
-  use_smote: False
+  penalty: elasticnet
+  solver: saga
 
 random_forest_no_feat_eng:
-  n_estimators: 100
-  max_depth: 10
-  min_samples_split: 2
-  min_samples_leaf: 1
+  bootstrap: false
+  criterion: log_loss
+  max_depth: 30
   max_features: sqrt
-  bootstrap: True
-  criterion: gini
-  use_smote: False
+  min_samples_leaf: 1
+  min_samples_split: 2
+  n_estimators: 402
 
 random_forest_feat_eng:
-  n_estimators: 100
-  max_depth: 10
-  min_samples_split: 2
-  min_samples_leaf: 1
+  bootstrap: false
+  criterion: entropy
+  max_depth: 25
   max_features: sqrt
-  bootstrap: True
-  criterion: gini
-  use_smote: False
+  min_samples_leaf: 1
+  min_samples_split: 4
+  n_estimators: 998
 
-catboost:
-  num_iter: 1000
+
+lightgbm_no_feat_eng:
+  learning_rate: 0.09991472256779813
+  max_depth: 14
+  min_data_in_leaf: 80
+  min_gain_to_split: 0.002058283006754594
+  n_estimators: 308
+  num_leaves: 184
+
+lightgbm_feat_eng:
+  learning_rate: 0.062170719319985725
+  max_depth: 5
+  min_data_in_leaf: 15
+  min_gain_to_split: 0.002071608294861996
+  n_estimators: 868
+  num_leaves: 91
+
+
+
+
