--- a/project2/task1/classical_ml/classical_ml_config.yaml
+++ b/project2/task1/classical_ml/classical_ml_config.yaml
@@ -1,26 +1,6 @@
 general:
   seed: 42
-lightgbm_feat_eng:
-  learning_rate: 0.08054840021306138
-  max_depth: 5
-  min_data_in_leaf: 73
-  min_gain_to_split: 0.0004473668788302328
-  n_estimators: 641
-  num_leaves: 52
-lightgbm_no_feat_eng:
-  learning_rate: 0.09991472256779813
-  max_depth: 14
-  min_data_in_leaf: 80
-  min_gain_to_split: 0.002058283006754594
-  n_estimators: 308
-  num_leaves: 184
-logistic_regression:
-  Cs: 10
-  cv: 5
-  max_iter: 1000
-  num_l1_ratios: 10
-  penalty: elasticnet
-  solver: saga
+
 paths:
   lightgbm_feat_eng: ../weights/lightgbm_feat_eng.pkl
   lightgbm_no_feat_eng: ../weights/lightgbm_no_feat_eng.pkl
@@ -30,14 +10,40 @@ paths:
   ptb_train: ../../data/ptbdb_train.csv
   rf_feat_eng: ../weights/rf_feat_eng.pkl
   rf_no_feat_eng: ../weights/rf_no_feat_eng.pkl
+
+logistic_regression:
+  Cs: 10
+  cv: 5
+  max_iter: 1000
+  num_l1_ratios: 10
+  penalty: elasticnet
+  solver: saga
+
+lightgbm_feat_eng:
+  learning_rate: 0.08054840021306138
+  max_depth: 5
+  min_data_in_leaf: 73
+  min_gain_to_split: 0.0004473668788302328
+  n_estimators: 641
+  num_leaves: 52
+
+lightgbm_no_feat_eng:
+  learning_rate: 0.09991472256779813
+  max_depth: 14
+  min_data_in_leaf: 80
+  min_gain_to_split: 0.002058283006754594
+  n_estimators: 308
+  num_leaves: 184
+
 random_forest_feat_eng:
   bootstrap: false
-  criterion: entropy
-  max_depth: 25
+  criterion: gini
+  max_depth: 41
   max_features: sqrt
   min_samples_leaf: 1
-  min_samples_split: 4
-  n_estimators: 998
+  min_samples_split: 2
+  n_estimators: 935
+
 random_forest_no_feat_eng:
   bootstrap: false
   criterion: log_loss
